# RevolutionEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakePresets.json_example  README.md  Revolution.sln
Editor/: CMakeLists.txt  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  ProjectPanel.cpp  ProjectPanel.h  REditor.cpp  REditor.h  RenderWindow.cpp  RenderWindow.h  SGWidget.cpp  SGWidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Editor/QADS/: DockManager.h  DockWidget.h
Editor/Setting/: Memory.h
Editor/Source/: editor.cpp
Editor/UI/: MainWindow.cpp  MainWindow.h
Editor/Widget/: MainWindow.cpp  MainWindow.h  SceneWindow.cpp  SceneWindow.h  mainwindow.ui
Engine/: All.h  CMakeLists.txt  Macros.h  PCH.h  Type.h
Engine/Base/: All.h  Container.h  Container.inl  Descriptor.h  Handle.h  Macros.h  PCH.h
Engine/Base/Memory/: Allocator.h  Container.h  StlAllocator.h
Engine/Base/STL/: STL.cpp  STL.h
Engine/Base/Utility/: Assert.h  Class.h  Common.h  Descriptor.h  IdFactory.h  Print.h  TypeId.cpp  TypeId.h  TypeIndex.h
Engine/Core/: Assert.h  Base.h  Core.h  Macros.h  PCH.h
Engine/Core/ECS/: Entity.h  Scene.cpp  Scene.h  State.h  StateCom.h  System.h  System.inl  SystemGroup.cpp  SystemGroup.h  Transform.h  World.cpp  World.h  WorldBase.cpp  WorldBase.h
Engine/Core/Memory/: Allocator.h  Mimalloc.h  Mimalloc.inl  StlAllocator.h  StlAllocator.inl
Engine/Core/STL/: STL.h
Engine/Core/Utility/: Print.h  Timer.h
Engine/ECS/: All.h  CECommandBuffer.h  Command.h  CommandBuffer.h  DescriptorFun.h  IdFactory.h  Resource.h  ResourceCommandBuffer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  StateComponent.h  System.h  System.inl  SystemGroup.cpp  SystemGroup.h  Task.h  TaskScheduler.cpp  TaskScheduler.h  Transform.h  World.cpp  World.h  WorldSystem.cpp  WorldSystem.h
Engine/ECS/Resource/: Resource.h  ResourceCommandBuffer.h  ResourceManager.cpp  ResourceManager.h  ResourceVisitor.h
Engine/ECS/System/: Pass.h  Pass.inl  PassInfo.cpp  PassInfo.h  PassInfo.inl  PassScheduler.cpp  PassScheduler.h  Scheduler.cpp  Scheduler.h  Stage.h  Stage.inl  System.h  System.inl  SystemGroup.cpp  SystemGroup.h  SystemPass.h  WorldStage.cpp  WorldStage.h
Engine/ECS/World/: ComponentTag.h  Entity.h  RegistryCommandBuffer.h  RegistryVisitor.h  Transform.h  World.cpp  World.h  WorldCommandBuffer.h
Engine/Include/: RE.h  REngine.h
Engine/Include/Base/: Assert.h  Base.h  Check.h  ClassDefine.h  CompileDefine.h  D3D12.h  Error.h  Export.h  FlagType.h  Result.h
Engine/Include/Geometry/: Geometry.h
Engine/Include/Graphics/: Factory.h  Graphics.h  GraphicsCore.h  GraphicsEngine.h  GraphicsEngineImpl.h
Engine/Include/Math/: AABB.h  Math.h  Vector2f.h  Vector3f.h  Vector4f.h
Engine/Include/Memory/: Allocate.h  Auxiliary.h  AuxiliaryFun.h  GlobalAllocator.h  Memory.h  MemoryAllocator.h
Engine/Include/REngine/: REngine.h
Engine/Include/Resource/: ResourceInfo.h  ResourceManager.h
Engine/Include/Scene/: ISceneImporter.h  Material.h  MaterialPropMap.h  Mesh.h  Scene.h  SceneImporterFactory.h  SceneObj.h  Texture.h
Engine/Include/TaskSystem/: TaskSystem.h
Engine/Include/Utils/: Json.h  TaskSystem.h  Utils.h
Engine/Memory/: Allocator.h  Mimalloc.cpp  OverNewDelete.cpp  OverNewDelete.h  StlAllocator.h
Engine/Platform/: DX12.h  OS.h
Engine/Render/: CommandListManager.cpp  CommandQueue.cpp  CommandQueue.h  DescriptorHeap.h  GpuBuffe.cpp  GpuResource.h  GraphicsCore.cpp  GraphicsCore.h  Macros.h  PipelineState.cpp  PipelineState.h  Render.h  RenderSystem.cpp  RenderSystem.h
Engine/Render/DX12/: CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandListManager.cpp  CommandListManager.h  CommandQueue.cpp  CommandQueue.h  Core.h  DescriptorHeap.cpp  DescriptorHeap.h  EsramAllocator.h  GpuResource.h  GraphicsCore.cpp  GraphicsCore.h  GraphicsCoreBase.cpp  GraphicsCoreBase.h  Hash.h  Macros.h  PipelineState.cpp  PipelineState.h  RootSignature.cpp  RootSignature.h  UploadBuffer.cpp  UploadBuffer.h
Engine/Render/ECS/: Camera.cpp  Camera.h  ColorVertex.cpp  ColorVertex.h  Common.h  ConstBuffer.h  GraphicsCore.cpp  GraphicsCore.h  Mesh.h  RenderAxis.cpp  RenderAxis.h  RenderSystem.cpp  RenderSystem.h
Engine/Render/RHI/: BitonicSort.cpp  BuddyAllocator.cpp  BuddyAllocator.h  BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Color.h  ColorBuffer.cpp  ColorBuffer.h  CommandAllocatorPool.cpp  CommandAllocatorPool.h  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  CommandQueue.h  CommandSignature.cpp  CommandSignature.h  Cube.cpp  Cube.h  DDSTextureLoader.cpp  DepthBuffer.cpp  DepthBuffer.h  DepthOfField.cpp  DescriptorHeap.cpp  DescriptorHeap.h  Display.cpp  Display.h  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  EngineProfiling.cpp  EngineTuning.cpp  EngineTuning.h  EsramAllocator.h  FXAA.cpp  FXAA.h  FileUtility.cpp  (+64 more)
Engine/Render/System/: AssimpModel.cpp  AssimpModel.h  Camera.cpp  ColorVertex.cpp  ColorVertex.h  CoreSystem.cpp  CoreSystem.h  GraphicsCore.cpp  GraphicsCore.h  RenderAxis.cpp  RenderAxis.h  RenderGLTF.cpp  RenderGLTF.h
Engine/Resource/: Resource.h  ResourceCommandBuffer.h  ResourceManager.cpp  ResourceManager.h  ResourceVisitor.h
Engine/Script/: All.h  ScriptManager.cpp  ScriptManager.h
Engine/Source/Base/: Result.cpp
Engine/Source/Core/: Application.cpp  Application.h  Core.h  Engine.cpp  Engine.h  EntryPoint.h  MacroDefine.h
Engine/Source/Graphics/: D3D12.h  Factory.cpp  GraphicsCore.cpp  GraphicsCore.h  GraphicsEngine.cpp  IGraphicsCore.CPP
Engine/Source/Log/: log.h
Engine/Test/: CMakeLists.txt
Engine/Type/: Auxiliary.h  Common.h  Config.h  Container.h  Pointer.h  STL.h  TypeConvert.h
Engine/Utility/: Class.h  Print.h
Generate/Editor/: CMakeLists.txt  LinkQt.cmake  t.cpp
Generate/Engine/: CMakeLists.txt  FlatGener.cmake  LinkSDK.cmake
Generate/Test/: CMakeLists.txt
Test/LinkEngine/: CMakeLists.txt  main.cpp
Test/TaskSystem/: CMakeLists.txt  main.cpp
(+420 files in other folders)
