cmake_minimum_required(VERSION 3.19)

project(TestResourceManager VERSION 1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CodePath ${CMAKE_CURRENT_LIST_DIR})

file(GLOB_RECURSE SOURCE_FILE
    "${CodePath}/*.h"
    "${CodePath}/*.cpp")

add_executable(${PROJECT_NAME} ${SOURCE_FILE} ${RESOURCE_FILE})

find_package(GTest CONFIG REQUIRED)
target_link_libraries(${PROJECT_NAME} PRIVATE GTest::gtest)

RE_TARGET_SET(${PROJECT_NAME})

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(${PROJECT_NAME} PUBLIC _DEBUG)
endif()

LinkEngine(${PROJECT_NAME})